veil-tests/src/compile_tests/fail/redactable_non_struct.rs
fn main() {}

#[derive(veil::Redactable)]
enum Foo {}

#[derive(veil::Redactable)]
union Bar {
    a: i32
}
